# colcon_d

./: README.md
.github/workflows/: ci.yml
colcon-dub/: README.md  setup.cfg
colcon-dub/colcon_dub/dub/: __init__.py
colcon-dub/colcon_dub/environment/: dub_package_path.py
colcon-dub/colcon_dub/package_identification/: dub.py
colcon-dub/colcon_dub/task/dub/: build.py  test.py
colcon-dub/test/: test_dub.py  test_exec_dub.py  test_flake8.py
colcon-dub/test/dub-test-package/: dub.json
colcon-dub/test/dub_test_package/: .gitignore  dub.json
colcon-dub/test/dub_test_package/source/: app.d
colcon-ros-dub/: README.md  setup.cfg  setup.py
colcon-ros-dub/colcon_ros_dub/: __init__.py
colcon-ros-dub/colcon_ros_dub/package_identification/: ament_dub.py  ros_dub.py
colcon-ros-dub/colcon_ros_dub/task/ament_dub/: build.py  test.py
colcon-ros-dub/colcon_ros_dub/task/ros_dub/: build.py
colcon-ros-dub/test/: test_ament_dub.py  test_exec_ros_dub.py
colcon-ros-dub/test/ros-dub-test1/: dub.json  package.xml
colcon-ros-dub/test/ros-dub-test2/: dub.json  package.xml
colcon-ros-dub/test/ros_dub_test1/: .gitignore  dub.json  package.xml
colcon-ros-dub/test/ros_dub_test1/source/: ros_dub_test1.d
colcon-ros-dub/test/ros_dub_test2/: .gitignore  dub.json  dub.selections.json  package.xml
colcon-ros-dub/test/ros_dub_test2/source/: app.d
test/: test_flake8.py
