[metadata]
name = colcon-dub
version = attr: colcon_dub.__version__
author = nonanonno
author_email = as.nonanonno@gmail.com
maintainer = nonanonno
maintainer_email = as.nonanonno@gmail.com
classifiers =
    Development Status :: 3 - Planning
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support DUB packages.
long_description = file: README.md
url = https://github.com/nonanonno/colcon_d
keywords = colcon

[options]
install_requires =
    colcon-core
    # to set an environment variable when a package installs a library
    colcon-library-path
packages = find:
tests_requre =
    flake8

[options.entry_points]
colcon_core.package_identification =
    dub = colcon_dub.package_identification.dub:DubPackageIdentification

[flake8]
import-order-style = google
