[metadata]
name = colcon-ros-dub
version = attr: colcon_ros_dub.__version__
author = nonanonno
author_email = as.nonanonno@gmail.com
maintainer = nonanonno
maintainer_email = as.nonanonno@gmail.com
classifiers =
    Development Status :: 3 - Planning
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support ROS2 DUB packages.
long_description = file: README.md
url = https://github.com/nonanonno/colcon_d
keywords = colcon

[options]
install_requires =
    colcon-core
    colcon-dub
    # to set an environment variable when a package installs a library
    colcon-library-path
    colcon-ros
packages = find:
tests_requre =
    flake8

[options.entry_points]
colcon_core.package_identification =
    ros.dub = colcon_ros_dub.package_identification.ros_dub:RosDubPackageIdentification
colcon_core.task.build =
    ros.dub = colcon_ros_dub.task.ros_dub.build:RosDubBuildTask


[flake8]
import-order-style = google
